# mdc

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  devcontainer.json  mdc.yaml
src/: main.rs
src/common/: cli_args.rs
src/mdc_server/: book_processor.rs  config.rs  depth_event_dispatcher.rs  depth_snapshot_stream.rs  market_event_logger.rs  market_event_stream.rs  mod.rs  models.rs  order_book.rs  server.rs
