[package]
name = "mdc"
version = "0.1.0"
edition = "2021"
description = "Market Depth Capture Tool for Binance"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
futures = "0.3.31"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
